<resources>
    <string name="app_name">Cricket Tournament App</string>
    <string name="team_name">Team Name:</string>
    <string name="enter_team_name">Enter Team Name</string>
    <string name="entry_status">Entry Status:</string>
    <string name="entry_category">Entry Category:</string>
    <string name="player_1">Player 1:</string>
    <string name="player_2">Player 2:</string>
    <string name="player_3">Player 3:</string>
    <string name="player_4">Player 4:</string>
    <string name="player_5">Player 5:</string>
    <string name="enter_name">Enter name</string>
    <string name="sub_player">Sub-Player:</string>
    <string name="add_players"><u>Add Players</u></string>
    <string name="team_owner">Team Owner:</string>
    <string name="add_team">Add Team</string>
    <string name="add_new_team"><u>Add New Team</u></string>
    <string name="id">Id</string>
    <string name="display_teams">Display Teams</string>
    <string name="img">img</string>
    <string name="display_matches">Display Matches</string>

    <string-array name="entry_status_list">
        <item>Select Entry Status</item>
        <item>Regular Entry</item>
        <item>Re-Entry</item>
    </string-array>

    <string-array name="entry_category_list">
        <item>Select Entry Category</item>
        <item>Inter Ward BMC</item>
        <item>Constituency Panchayat</item>
        <item>Bicholim Taluka</item>
        <item>All Goa</item>
    </string-array>

</resources>